Resource getLabsByExamName in examController
